<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/txt_first_name"
        android:layout_width="match_parent"
        android:layout_height="32dp"
        android:layout_weight="1"
        android:background="#e1d940"
        android:hint="First name"/>

    <TextView
        android:id="@+id/txt_last_name"
        android:layout_width="match_parent"
        android:layout_height="32dp"
        android:layout_weight="1"
        android:background="#ff995e"
        android:hint="Last name"/>

    <TextView
        android:id="@+id/txt_birthday"
        android:layout_width="match_parent"
        android:layout_height="32dp"
        android:layout_weight="1"
        android:background="#3ccde1"
        android:hint="@string/btn_birthday"/>

    <TextView
        android:id="@+id/txt_about_me"
        android:layout_width="match_parent"
        android:layout_height="345dp"
        android:background="#8332ff24"
        android:text="@string/btn_about_me" />

    <Button
        android:id="@+id/btn_close_app"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/btn_close_app" />

</LinearLayout>